// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AuthentificationAdminPage /> renders correctly 1`] = `
<Fragment>
  <ReactRelayQueryRenderer
    environment={"RelayModernEnvironment()"}
    query={
      Object {
        "fragment": Object {
          "abstractKey": null,
          "argumentDefinitions": Array [],
          "kind": "Fragment",
          "metadata": null,
          "name": "AuthentificationAdminPageQuery",
          "selections": Array [
            Object {
              "alias": null,
              "args": null,
              "concreteType": "ShieldAdminForm",
              "kind": "LinkedField",
              "name": "shieldAdminForm",
              "plural": false,
              "selections": Array [
                Object {
                  "args": null,
                  "kind": "FragmentSpread",
                  "name": "AuthentificationAdminPageContent_shieldAdminForm",
                },
              ],
              "storageKey": null,
            },
            Object {
              "args": null,
              "kind": "FragmentSpread",
              "name": "AuthentificationAdminPageContent_query",
            },
          ],
          "type": "Query",
        },
        "hash": "371b4642b0c255760bd007274b0fac85",
        "kind": "Request",
        "operation": Object {
          "argumentDefinitions": Array [],
          "kind": "Operation",
          "name": "AuthentificationAdminPageQuery",
          "selections": Array [
            Object {
              "alias": null,
              "args": null,
              "concreteType": "ShieldAdminForm",
              "kind": "LinkedField",
              "name": "shieldAdminForm",
              "plural": false,
              "selections": Array [
                Object {
                  "alias": null,
                  "args": null,
                  "kind": "ScalarField",
                  "name": "shieldMode",
                  "storageKey": null,
                },
                Object {
                  "alias": null,
                  "args": null,
                  "concreteType": "ShieldAdminFormTranslation",
                  "kind": "LinkedField",
                  "name": "translations",
                  "plural": true,
                  "selections": Array [
                    Object {
                      "alias": null,
                      "args": null,
                      "kind": "ScalarField",
                      "name": "locale",
                      "storageKey": null,
                    },
                    Object {
                      "alias": null,
                      "args": null,
                      "kind": "ScalarField",
                      "name": "introduction",
                      "storageKey": null,
                    },
                  ],
                  "storageKey": null,
                },
                Object {
                  "alias": null,
                  "args": null,
                  "concreteType": "Media",
                  "kind": "LinkedField",
                  "name": "media",
                  "plural": false,
                  "selections": Array [
                    Object {
                      "alias": null,
                      "args": null,
                      "kind": "ScalarField",
                      "name": "id",
                      "storageKey": null,
                    },
                    Object {
                      "alias": null,
                      "args": null,
                      "kind": "ScalarField",
                      "name": "url",
                      "storageKey": null,
                    },
                    Object {
                      "alias": null,
                      "args": null,
                      "kind": "ScalarField",
                      "name": "name",
                      "storageKey": null,
                    },
                  ],
                  "storageKey": null,
                },
              ],
              "storageKey": null,
            },
            Object {
              "alias": null,
              "args": Array [
                Object {
                  "kind": "Literal",
                  "name": "first",
                  "value": 100,
                },
              ],
              "concreteType": "SSOConfigurationConnection",
              "kind": "LinkedField",
              "name": "ssoConfigurations",
              "plural": false,
              "selections": Array [
                Object {
                  "alias": null,
                  "args": null,
                  "concreteType": "SSOConfigurationEdge",
                  "kind": "LinkedField",
                  "name": "edges",
                  "plural": true,
                  "selections": Array [
                    Object {
                      "alias": null,
                      "args": null,
                      "concreteType": null,
                      "kind": "LinkedField",
                      "name": "node",
                      "plural": false,
                      "selections": Array [
                        Object {
                          "alias": null,
                          "args": null,
                          "kind": "ScalarField",
                          "name": "__typename",
                          "storageKey": null,
                        },
                        Object {
                          "abstractKey": "__isSSOConfiguration",
                          "kind": "TypeDiscriminator",
                        },
                        Object {
                          "alias": null,
                          "args": null,
                          "kind": "ScalarField",
                          "name": "id",
                          "storageKey": null,
                        },
                        Object {
                          "alias": null,
                          "args": null,
                          "kind": "ScalarField",
                          "name": "enabled",
                          "storageKey": null,
                        },
                        Object {
                          "abstractKey": null,
                          "kind": "InlineFragment",
                          "selections": Array [
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "name",
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "clientId",
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "secret",
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "authorizationUrl",
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "accessTokenUrl",
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "userInfoUrl",
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "logoutUrl",
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "redirectUri",
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "profileUrl",
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "disconnectSsoOnLogout",
                              "storageKey": null,
                            },
                          ],
                          "type": "Oauth2SSOConfiguration",
                        },
                        Object {
                          "abstractKey": null,
                          "kind": "InlineFragment",
                          "selections": Array [
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "clientId",
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "secret",
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "environment",
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "redirectUri",
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "logoutUrl",
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "allowedData",
                              "storageKey": null,
                            },
                          ],
                          "type": "FranceConnectSSOConfiguration",
                        },
                        Object {
                          "abstractKey": null,
                          "kind": "InlineFragment",
                          "selections": Array [
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "clientId",
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "secret",
                              "storageKey": null,
                            },
                          ],
                          "type": "FacebookSSOConfiguration",
                        },
                      ],
                      "storageKey": null,
                    },
                    Object {
                      "alias": null,
                      "args": null,
                      "kind": "ScalarField",
                      "name": "cursor",
                      "storageKey": null,
                    },
                  ],
                  "storageKey": null,
                },
                Object {
                  "alias": null,
                  "args": null,
                  "concreteType": "PageInfo",
                  "kind": "LinkedField",
                  "name": "pageInfo",
                  "plural": false,
                  "selections": Array [
                    Object {
                      "alias": null,
                      "args": null,
                      "kind": "ScalarField",
                      "name": "endCursor",
                      "storageKey": null,
                    },
                    Object {
                      "alias": null,
                      "args": null,
                      "kind": "ScalarField",
                      "name": "hasNextPage",
                      "storageKey": null,
                    },
                  ],
                  "storageKey": null,
                },
                Object {
                  "kind": "ClientExtension",
                  "selections": Array [
                    Object {
                      "alias": null,
                      "args": null,
                      "kind": "ScalarField",
                      "name": "__id",
                      "storageKey": null,
                    },
                  ],
                },
              ],
              "storageKey": "ssoConfigurations(first:100)",
            },
            Object {
              "alias": null,
              "args": Array [
                Object {
                  "kind": "Literal",
                  "name": "first",
                  "value": 100,
                },
              ],
              "filters": null,
              "handle": "connection",
              "key": "ListCustomSSO_ssoConfigurations",
              "kind": "LinkedHandle",
              "name": "ssoConfigurations",
            },
            Object {
              "alias": null,
              "args": Array [
                Object {
                  "kind": "Literal",
                  "name": "first",
                  "value": 100,
                },
              ],
              "filters": null,
              "handle": "connection",
              "key": "ListPublicSSO_ssoConfigurations",
              "kind": "LinkedHandle",
              "name": "ssoConfigurations",
            },
            Object {
              "alias": null,
              "args": null,
              "concreteType": "User",
              "kind": "LinkedField",
              "name": "viewer",
              "plural": false,
              "selections": Array [
                Object {
                  "alias": null,
                  "args": null,
                  "kind": "ScalarField",
                  "name": "isSuperAdmin",
                  "storageKey": null,
                },
                Object {
                  "alias": null,
                  "args": null,
                  "kind": "ScalarField",
                  "name": "id",
                  "storageKey": null,
                },
              ],
              "storageKey": null,
            },
          ],
        },
        "params": Object {
          "cacheID": "d9fcbe3bbcf55490a27ad90d342caeb0",
          "id": null,
          "metadata": Object {},
          "name": "AuthentificationAdminPageQuery",
          "operationKind": "query",
          "text": "query AuthentificationAdminPageQuery {
  shieldAdminForm {
    ...AuthentificationAdminPageContent_shieldAdminForm
  }
  ...AuthentificationAdminPageContent_query
}

fragment AuthentificationAdminPageContent_query on Query {
  ...ListSSOConfiguration_query
}

fragment AuthentificationAdminPageContent_shieldAdminForm on ShieldAdminForm {
  ...ShieldAdminForm_shieldAdminForm
}

fragment FacebookConfigurationCard_ssoConfiguration on FacebookSSOConfiguration {
  ...FacebookConfigurationModal_ssoConfiguration
  __typename
  clientId
  secret
  enabled
}

fragment FacebookConfigurationForm_ssoConfiguration on FacebookSSOConfiguration {
  __typename
  clientId
  secret
  enabled
}

fragment FacebookConfigurationModal_ssoConfiguration on FacebookSSOConfiguration {
  ...FacebookConfigurationForm_ssoConfiguration
}

fragment FranceConnectConfigurationModal_ssoConfiguration on FranceConnectSSOConfiguration {
  id
  clientId
  secret
  environment
  redirectUri
  logoutUrl
  allowedData
}

fragment ListCustomSSO_query on Query {
  ssoConfigurations(first: 100) {
    edges {
      node {
        __typename
        ...SSOConfigurationItem_configuration
        id
      }
      cursor
    }
    pageInfo {
      endCursor
      hasNextPage
    }
  }
}

fragment ListPublicSSO_query on Query {
  ssoConfigurations(first: 100) {
    edges {
      node {
        id
        __typename
        enabled
        ...FranceConnectConfigurationModal_ssoConfiguration
        ...FacebookConfigurationCard_ssoConfiguration
      }
      cursor
    }
    pageInfo {
      endCursor
      hasNextPage
    }
  }
  viewer {
    isSuperAdmin
    id
  }
}

fragment ListSSOConfiguration_query on Query {
  ...ListCustomSSO_query
  ...ListPublicSSO_query
}

fragment Oauth2SSOConfigurationItem_configuration on Oauth2SSOConfiguration {
  id
  enabled
  name
  clientId
  secret
  authorizationUrl
  accessTokenUrl
  userInfoUrl
  logoutUrl
  redirectUri
  profileUrl
  __typename
  disconnectSsoOnLogout
}

fragment SSOConfigurationItem_configuration on SSOConfiguration {
  __isSSOConfiguration: __typename
  __typename
  ... on Oauth2SSOConfiguration {
    ...Oauth2SSOConfigurationItem_configuration
  }
}

fragment ShieldAdminForm_shieldAdminForm on ShieldAdminForm {
  shieldMode
  translations {
    locale
    introduction
  }
  media {
    id
    url
    name
  }
}
",
        },
      }
    }
    render={[Function]}
    variables={
      Object {
        "isFranceConnectEnable": false,
      }
    }
  />
  <Connect(SSOByPassAuthForm) />
</Fragment>
`;

exports[`<AuthentificationAdminPage /> renders correctly FC enabled 1`] = `
<Fragment>
  <ReactRelayQueryRenderer
    environment={"RelayModernEnvironment()"}
    query={
      Object {
        "fragment": Object {
          "abstractKey": null,
          "argumentDefinitions": Array [],
          "kind": "Fragment",
          "metadata": null,
          "name": "AuthentificationAdminPageQuery",
          "selections": Array [
            Object {
              "alias": null,
              "args": null,
              "concreteType": "ShieldAdminForm",
              "kind": "LinkedField",
              "name": "shieldAdminForm",
              "plural": false,
              "selections": Array [
                Object {
                  "args": null,
                  "kind": "FragmentSpread",
                  "name": "AuthentificationAdminPageContent_shieldAdminForm",
                },
              ],
              "storageKey": null,
            },
            Object {
              "args": null,
              "kind": "FragmentSpread",
              "name": "AuthentificationAdminPageContent_query",
            },
          ],
          "type": "Query",
        },
        "hash": "371b4642b0c255760bd007274b0fac85",
        "kind": "Request",
        "operation": Object {
          "argumentDefinitions": Array [],
          "kind": "Operation",
          "name": "AuthentificationAdminPageQuery",
          "selections": Array [
            Object {
              "alias": null,
              "args": null,
              "concreteType": "ShieldAdminForm",
              "kind": "LinkedField",
              "name": "shieldAdminForm",
              "plural": false,
              "selections": Array [
                Object {
                  "alias": null,
                  "args": null,
                  "kind": "ScalarField",
                  "name": "shieldMode",
                  "storageKey": null,
                },
                Object {
                  "alias": null,
                  "args": null,
                  "concreteType": "ShieldAdminFormTranslation",
                  "kind": "LinkedField",
                  "name": "translations",
                  "plural": true,
                  "selections": Array [
                    Object {
                      "alias": null,
                      "args": null,
                      "kind": "ScalarField",
                      "name": "locale",
                      "storageKey": null,
                    },
                    Object {
                      "alias": null,
                      "args": null,
                      "kind": "ScalarField",
                      "name": "introduction",
                      "storageKey": null,
                    },
                  ],
                  "storageKey": null,
                },
                Object {
                  "alias": null,
                  "args": null,
                  "concreteType": "Media",
                  "kind": "LinkedField",
                  "name": "media",
                  "plural": false,
                  "selections": Array [
                    Object {
                      "alias": null,
                      "args": null,
                      "kind": "ScalarField",
                      "name": "id",
                      "storageKey": null,
                    },
                    Object {
                      "alias": null,
                      "args": null,
                      "kind": "ScalarField",
                      "name": "url",
                      "storageKey": null,
                    },
                    Object {
                      "alias": null,
                      "args": null,
                      "kind": "ScalarField",
                      "name": "name",
                      "storageKey": null,
                    },
                  ],
                  "storageKey": null,
                },
              ],
              "storageKey": null,
            },
            Object {
              "alias": null,
              "args": Array [
                Object {
                  "kind": "Literal",
                  "name": "first",
                  "value": 100,
                },
              ],
              "concreteType": "SSOConfigurationConnection",
              "kind": "LinkedField",
              "name": "ssoConfigurations",
              "plural": false,
              "selections": Array [
                Object {
                  "alias": null,
                  "args": null,
                  "concreteType": "SSOConfigurationEdge",
                  "kind": "LinkedField",
                  "name": "edges",
                  "plural": true,
                  "selections": Array [
                    Object {
                      "alias": null,
                      "args": null,
                      "concreteType": null,
                      "kind": "LinkedField",
                      "name": "node",
                      "plural": false,
                      "selections": Array [
                        Object {
                          "alias": null,
                          "args": null,
                          "kind": "ScalarField",
                          "name": "__typename",
                          "storageKey": null,
                        },
                        Object {
                          "abstractKey": "__isSSOConfiguration",
                          "kind": "TypeDiscriminator",
                        },
                        Object {
                          "alias": null,
                          "args": null,
                          "kind": "ScalarField",
                          "name": "id",
                          "storageKey": null,
                        },
                        Object {
                          "alias": null,
                          "args": null,
                          "kind": "ScalarField",
                          "name": "enabled",
                          "storageKey": null,
                        },
                        Object {
                          "abstractKey": null,
                          "kind": "InlineFragment",
                          "selections": Array [
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "name",
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "clientId",
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "secret",
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "authorizationUrl",
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "accessTokenUrl",
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "userInfoUrl",
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "logoutUrl",
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "redirectUri",
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "profileUrl",
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "disconnectSsoOnLogout",
                              "storageKey": null,
                            },
                          ],
                          "type": "Oauth2SSOConfiguration",
                        },
                        Object {
                          "abstractKey": null,
                          "kind": "InlineFragment",
                          "selections": Array [
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "clientId",
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "secret",
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "environment",
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "redirectUri",
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "logoutUrl",
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "allowedData",
                              "storageKey": null,
                            },
                          ],
                          "type": "FranceConnectSSOConfiguration",
                        },
                        Object {
                          "abstractKey": null,
                          "kind": "InlineFragment",
                          "selections": Array [
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "clientId",
                              "storageKey": null,
                            },
                            Object {
                              "alias": null,
                              "args": null,
                              "kind": "ScalarField",
                              "name": "secret",
                              "storageKey": null,
                            },
                          ],
                          "type": "FacebookSSOConfiguration",
                        },
                      ],
                      "storageKey": null,
                    },
                    Object {
                      "alias": null,
                      "args": null,
                      "kind": "ScalarField",
                      "name": "cursor",
                      "storageKey": null,
                    },
                  ],
                  "storageKey": null,
                },
                Object {
                  "alias": null,
                  "args": null,
                  "concreteType": "PageInfo",
                  "kind": "LinkedField",
                  "name": "pageInfo",
                  "plural": false,
                  "selections": Array [
                    Object {
                      "alias": null,
                      "args": null,
                      "kind": "ScalarField",
                      "name": "endCursor",
                      "storageKey": null,
                    },
                    Object {
                      "alias": null,
                      "args": null,
                      "kind": "ScalarField",
                      "name": "hasNextPage",
                      "storageKey": null,
                    },
                  ],
                  "storageKey": null,
                },
                Object {
                  "kind": "ClientExtension",
                  "selections": Array [
                    Object {
                      "alias": null,
                      "args": null,
                      "kind": "ScalarField",
                      "name": "__id",
                      "storageKey": null,
                    },
                  ],
                },
              ],
              "storageKey": "ssoConfigurations(first:100)",
            },
            Object {
              "alias": null,
              "args": Array [
                Object {
                  "kind": "Literal",
                  "name": "first",
                  "value": 100,
                },
              ],
              "filters": null,
              "handle": "connection",
              "key": "ListCustomSSO_ssoConfigurations",
              "kind": "LinkedHandle",
              "name": "ssoConfigurations",
            },
            Object {
              "alias": null,
              "args": Array [
                Object {
                  "kind": "Literal",
                  "name": "first",
                  "value": 100,
                },
              ],
              "filters": null,
              "handle": "connection",
              "key": "ListPublicSSO_ssoConfigurations",
              "kind": "LinkedHandle",
              "name": "ssoConfigurations",
            },
            Object {
              "alias": null,
              "args": null,
              "concreteType": "User",
              "kind": "LinkedField",
              "name": "viewer",
              "plural": false,
              "selections": Array [
                Object {
                  "alias": null,
                  "args": null,
                  "kind": "ScalarField",
                  "name": "isSuperAdmin",
                  "storageKey": null,
                },
                Object {
                  "alias": null,
                  "args": null,
                  "kind": "ScalarField",
                  "name": "id",
                  "storageKey": null,
                },
              ],
              "storageKey": null,
            },
          ],
        },
        "params": Object {
          "cacheID": "d9fcbe3bbcf55490a27ad90d342caeb0",
          "id": null,
          "metadata": Object {},
          "name": "AuthentificationAdminPageQuery",
          "operationKind": "query",
          "text": "query AuthentificationAdminPageQuery {
  shieldAdminForm {
    ...AuthentificationAdminPageContent_shieldAdminForm
  }
  ...AuthentificationAdminPageContent_query
}

fragment AuthentificationAdminPageContent_query on Query {
  ...ListSSOConfiguration_query
}

fragment AuthentificationAdminPageContent_shieldAdminForm on ShieldAdminForm {
  ...ShieldAdminForm_shieldAdminForm
}

fragment FacebookConfigurationCard_ssoConfiguration on FacebookSSOConfiguration {
  ...FacebookConfigurationModal_ssoConfiguration
  __typename
  clientId
  secret
  enabled
}

fragment FacebookConfigurationForm_ssoConfiguration on FacebookSSOConfiguration {
  __typename
  clientId
  secret
  enabled
}

fragment FacebookConfigurationModal_ssoConfiguration on FacebookSSOConfiguration {
  ...FacebookConfigurationForm_ssoConfiguration
}

fragment FranceConnectConfigurationModal_ssoConfiguration on FranceConnectSSOConfiguration {
  id
  clientId
  secret
  environment
  redirectUri
  logoutUrl
  allowedData
}

fragment ListCustomSSO_query on Query {
  ssoConfigurations(first: 100) {
    edges {
      node {
        __typename
        ...SSOConfigurationItem_configuration
        id
      }
      cursor
    }
    pageInfo {
      endCursor
      hasNextPage
    }
  }
}

fragment ListPublicSSO_query on Query {
  ssoConfigurations(first: 100) {
    edges {
      node {
        id
        __typename
        enabled
        ...FranceConnectConfigurationModal_ssoConfiguration
        ...FacebookConfigurationCard_ssoConfiguration
      }
      cursor
    }
    pageInfo {
      endCursor
      hasNextPage
    }
  }
  viewer {
    isSuperAdmin
    id
  }
}

fragment ListSSOConfiguration_query on Query {
  ...ListCustomSSO_query
  ...ListPublicSSO_query
}

fragment Oauth2SSOConfigurationItem_configuration on Oauth2SSOConfiguration {
  id
  enabled
  name
  clientId
  secret
  authorizationUrl
  accessTokenUrl
  userInfoUrl
  logoutUrl
  redirectUri
  profileUrl
  __typename
  disconnectSsoOnLogout
}

fragment SSOConfigurationItem_configuration on SSOConfiguration {
  __isSSOConfiguration: __typename
  __typename
  ... on Oauth2SSOConfiguration {
    ...Oauth2SSOConfigurationItem_configuration
  }
}

fragment ShieldAdminForm_shieldAdminForm on ShieldAdminForm {
  shieldMode
  translations {
    locale
    introduction
  }
  media {
    id
    url
    name
  }
}
",
        },
      }
    }
    render={[Function]}
    variables={
      Object {
        "isFranceConnectEnable": true,
      }
    }
  />
  <Connect(SSOByPassAuthForm) />
</Fragment>
`;
